tests/generics/gentle/shouldfail/002-genfunc-noargs.ooc
printType: func <T> {
	printf("Got object of type %s\n", T name)
}

main: func {
	printType()
}
